# RL-SweepingRobot

./: .gitignore  README.md  pyproject.toml  sweeping_robot_env.ipynb
docs/: elegantbook.cls  main.tex  reference.bib
docs/appendix/: REINFORCE.tex  double-mountain-car-env.tex  multi-switch-env.tex  ppo.tex  q-learning.tex  saras.tex  sweeping-robot-env.tex
docs/ch1-env/: double_mountain_car_env.tex  multi_switch_env.tex  sweep_robot_env.tex
docs/ch2/: REINFORCE.tex  q-learning.tex  saras.tex
docs/chapers/learning-dynamics/: gradient-descent-intro.tex
res/double_mountain_car/: monitor.csv  vecnorm.pkl
res/sweep_robot/policy-gradient/: policy_gradient_model.pth
src/: REINFORCE.py  color_grid_env.py  double_mountain_car_env.py  evaluate_double_mountain_car.py  main.py  multi_switch_env.py  policy_gradient.py  ppo.py  q-learning.py  saras.py  sweeping_robot_env.py  test-sweep.py  test.py  value-interation.py
src/_utils/_logger/: _get_logger.py  _logging.py
