[project]
name = "rl-sweaping_robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightning>=2.5.1.post0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
